--- a/production/deployment/config/config.yaml
+++ b/production/deployment/config/config.yaml
@@ -1,2 +1,57 @@
 proxy:
   secretToken: "e7bff733b77309ca273df70e6680e582b0ebf4baf888f73d3d596e90dab019cf"
+  #https:
+  #  hosts:
+  #    - notebooks.deebul.me
+  #  letsencrypt:
+  #    contactEmail: mhm.wasil@gmail.com
+
+hub:
+  extraConfig: |-
+    c.Spawner.cmd = ['jupyter-labhub']
+
+auth:
+  whitelist:
+    users:
+      - mhwasil
+      - n_dnair2s
+  admin:
+    users:
+      - mhwasil
+      - b_hbalab2s
+      - b_pbecke2m
+      - k_akuenst2m
+      - l_olanze2m
+      - m_amitre2s
+      - p_pploeg2m
+      - n_dnair2s
+
+#auth:
+#  type: github
+#  github:
+#    clientId: "4c4b0149fbee3d1edae3"
+#    clientSecret: "be560598fa89096f2e02f1ee72232d9b0eb277d5"
+#    callbackUrl: "http://35.205.211.124/hub/login"
+
+singleuser:
+  defaultUrl: "/tree"
+
+  lifecycleHooks:
+    postStart:
+      exec:
+        command: ["gitpuller", "https://github.com/WahrscheinlichkeitstheorieUndStatistik/Inhalt", "master", "materials-ws2018"]
+  
+  memory:
+    limit: 1G
+    #guarantee: 1G
+  cpu:
+    limit: 0.75
+    #guarantee: 0.5
+  image:
+    name : "gcr.io/e2-x-am-datahub/singleuser-winter"
+    tag : "15f8ea0"
+  
+  storage:
+    dynamic:
+      storageClass: standard
+    capacity: 5Gi
