change image repo to mas-datahub

--- a/development/user-image/winterhub/Dockerfile
+++ b/development/user-image/winterhub/Dockerfile
@@ -70,10 +70,10 @@ RUN pip install RISE==5.4.1 && \
     jupyter-nbextension install rise --py --sys-prefix
 
 # Install codefolding and google translate
-#RUN pip install jupyter_contrib_nbextensions==0.5.0 && \
-#    jupyter contrib nbextension install --sys-prefix && \
-#    jupyter nbextension enable --sys-prefix codefolding/main && \
-#    jupyter nbextension enable --sys-prefix nbTranslate/main
+RUN pip install jupyter_contrib_nbextensions==0.5.0 && \
+    jupyter contrib nbextension install --sys-prefix && \
+    jupyter nbextension enable --sys-prefix codefolding/main && \
+    jupyter nbextension enable --sys-prefix nbTranslate/main
 
 # Install drawio
 #RUN jupyter labextension install jupyterlab-drawio
